oop_mro/tests/trybuild/fail_as_base_ambiguous_generic_same_specialization.stderr
warning: use of deprecated constant `_::__OOP_MRO_WARNING`: ambiguous base `Slot` in class `Diamond`: `as_base::<Slot < i32 >>()` is unavailable because the target is not unique; use path-directed casts such as `as_base_via::<Left, Slot < i32 >>()`, `as_base_via::<Right, Slot < i32 >>()`
  --> tests/trybuild/fail_as_base_ambiguous_generic_same_specialization.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Slot<T> {
 5 | |         value: Option<T> = None,
...  |
 9 | |     class Diamond: Left, Right {}
10 | | }
   | |_^
   |
   = note: `#[warn(deprecated)]` on by default
   = note: this warning originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Diamond: OopBase<Slot<i32>>` is not satisfied
  --> tests/trybuild/fail_as_base_ambiguous_generic_same_specialization.rs:14:21
   |
14 |     let _ = diamond.as_base::<Slot<i32>>();
   |                     ^^^^^^^ unsatisfied trait bound
   |
help: the trait `OopBase<Slot<i32>>` is not implemented for `Diamond`
  --> tests/trybuild/fail_as_base_ambiguous_generic_same_specialization.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Slot<T> {
 5 | |         value: Option<T> = None,
...  |
 8 | |     class Right: Slot<i32> {}
 9 | |     class Diamond: Left, Right {}
   | |_________________^
help: the following other types implement trait `OopBase<Target>`
  --> tests/trybuild/fail_as_base_ambiguous_generic_same_specialization.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Slot<T> {
 5 | |         value: Option<T> = None,
...  |
 8 | |     class Right: Slot<i32> {}
 9 | |     class Diamond: Left, Right {}
   | |                 ^
   | |                 |
   | |                 `Diamond` implements `OopBase<Diamond>`
   | |_________________`Diamond` implements `OopBase<Left>`
   |                   `Diamond` implements `OopBase<Right>`
note: required by a bound in `as_base`
  --> src/lib.rs
   |
   |     fn as_base<Target>(&self) -> &Target
   |        ------- required by a bound in this associated function
   |     where
   |         Self: OopBase<Target>,
   |               ^^^^^^^^^^^^^^^ required by this bound in `OopBaseAccess::as_base`
   = note: this error originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)
